--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ python-dateutil==2.7.2
 pytz==2018.3
 six==1.11.0
 textblob==0.15.1
+celery==4.1.0
+billiard==3.5.0.3
+kombu==4.1.0
+redis==2.10.6
+vine==1.1.4
