--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
+cycler==0.10.0
 Django==2.0
+kiwisolver==1.0.1
+kombu==4.1.0
+matplotlib==2.2.2
+mysqlclient==1.3.12
 nltk==3.2.5
 numpy==1.14.2
 pandas==0.22.0
+pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.3
-six==1.11.0
-textblob==0.15.1
-celery==4.1.0
-billiard==3.5.0.3
-kombu==4.1.0
 redis==2.10.6
+scikit-learn==0.19.1
+six==1.11.0
+sklearn==0.0
+textblob==0.15.1
 vine==1.1.4
+
