--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ billiard==3.5.0.3
 celery==4.1.0
 cycler==0.10.0
 Django==2.0
+django-widget-tweaks==1.4.2
 kiwisolver==1.0.1
 kombu==4.1.0
 matplotlib==2.2.2
@@ -15,8 +16,10 @@ python-dateutil==2.7.2
 pytz==2018.3
 redis==2.10.6
 scikit-learn==0.19.1
+scipy==1.0.1
 six==1.11.0
 sklearn==0.0
 textblob==0.15.1
 vine==1.1.4
+
 
